// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion #handleClick Multiple visible by default closed collapsible click closes other collapsibles 1`] = `
<body>
  
  
  <div
    class="accordion"
    data-accordion="accordion-id"
  >
    
    
    <div
      class="collapsible"
      data-collapsible="collapsible-id-1"
      data-visible="true"
    >
      
      
      <h5>
        
        
        <button
          aria-controls="collapsible-id-1"
          aria-expanded="true"
          class="collapsible-trigger"
          data-parent="accordion-id"
          data-target="collapsible-id-1"
          id="collapsible-trigger-id"
        >
          
          Collapsible Trigger
        
        </button>
        
      
      </h5>
      
      
      <div
        aria-hidden="false"
        aria-labelledby="collapsible-trigger-id"
        class="collapsible-content"
        id="collapsible-id-1"
        style="max-height: 0rem;"
      >
        
        
        <p
          class="has-p"
        >
          
          Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
          ipsum ut voluptate. 
          <a
            href="#"
            tabindex="0"
          >
            E pluribus unum.
          </a>
          
        
        </p>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="collapsible"
      data-collapsible="collapsible-id-2"
      data-visible="false"
    >
      
      
      <h5>
        
        
        <button
          aria-controls="collapsible-id-2"
          aria-expanded="false"
          class="collapsible-trigger"
          data-parent="accordion-id"
          data-target="collapsible-id-2"
          id="collapsible-trigger-id"
        >
          
          Collapsible Trigger
        
        </button>
        
      
      </h5>
      
      
      <div
        aria-hidden="true"
        aria-labelledby="collapsible-trigger-id"
        class="collapsible-content"
        id="collapsible-id-2"
        style=""
      >
        
        
        <p
          class="has-p"
        >
          
          Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
          ipsum ut voluptate. 
          <a
            href="#"
            tabindex="-1"
          >
            E pluribus unum.
          </a>
          
        
        </p>
        
      
      </div>
      
    
    </div>
    
  
  </div>
  

</body>
`;

exports[`Accordion #handleClick Multiple visible by default open collapsible click keeps other collapsibles open 1`] = `
<body>
  
  
  <div
    class="accordion"
    data-accordion="accordion-id"
  >
    
    
    <div
      class="collapsible"
      data-collapsible="collapsible-id-1"
      data-visible="false"
    >
      
      
      <h5>
        
        
        <button
          aria-controls="collapsible-id-1"
          aria-expanded="false"
          class="collapsible-trigger"
          data-parent="accordion-id"
          data-target="collapsible-id-1"
          id="collapsible-trigger-id"
        >
          
          Collapsible Trigger
        
        </button>
        
      
      </h5>
      
      
      <div
        aria-hidden="true"
        aria-labelledby="collapsible-trigger-id"
        class="collapsible-content"
        id="collapsible-id-1"
        style=""
      >
        
        
        <p
          class="has-p"
        >
          
          Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
          ipsum ut voluptate. 
          <a
            href="#"
            tabindex="-1"
          >
            E pluribus unum.
          </a>
          
        
        </p>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="collapsible"
      data-collapsible="collapsible-id-2"
      data-visible="true"
    >
      
      
      <h5>
        
        
        <button
          aria-controls="collapsible-id-2"
          aria-expanded="true"
          class="collapsible-trigger"
          data-parent="accordion-id"
          data-target="collapsible-id-2"
          id="collapsible-trigger-id"
        >
          
          Collapsible Trigger
        
        </button>
        
      
      </h5>
      
      
      <div
        aria-hidden="false"
        aria-labelledby="collapsible-trigger-id"
        class="collapsible-content"
        id="collapsible-id-2"
        style="max-height: 0rem;"
      >
        
        
        <p
          class="has-p"
        >
          
          Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
          ipsum ut voluptate. 
          <a
            href="#"
            tabindex="0"
          >
            E pluribus unum.
          </a>
          
        
        </p>
        
      
      </div>
      
    
    </div>
    
  
  </div>
  

</body>
`;

exports[`Accordion #handleClick closes open collapsible 1`] = `
<body>
  
  
  <div
    class="accordion"
    data-accordion="accordion-id"
  >
    
    
    <div
      class="collapsible"
      data-collapsible="collapsible-id-1"
      data-visible="false"
    >
      
      
      <h5>
        
        
        <button
          aria-controls="collapsible-id-1"
          aria-expanded="false"
          class="collapsible-trigger"
          data-parent="accordion-id"
          data-target="collapsible-id-1"
          id="collapsible-trigger-id"
        >
          
          Collapsible Trigger
        
        </button>
        
      
      </h5>
      
      
      <div
        aria-hidden="true"
        aria-labelledby="collapsible-trigger-id"
        class="collapsible-content"
        id="collapsible-id-1"
        style=""
      >
        
        
        <p
          class="has-p"
        >
          
          Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
          ipsum ut voluptate. 
          <a
            href="#"
            tabindex="-1"
          >
            E pluribus unum.
          </a>
          
        
        </p>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="collapsible"
      data-collapsible="collapsible-id-2"
      data-visible="false"
    >
      
      
      <h5>
        
        
        <button
          aria-controls="collapsible-id-2"
          aria-expanded="false"
          class="collapsible-trigger"
          data-parent="accordion-id"
          data-target="collapsible-id-2"
          id="collapsible-trigger-id"
        >
          
          Collapsible Trigger
        
        </button>
        
      
      </h5>
      
      
      <div
        aria-hidden="true"
        aria-labelledby="collapsible-trigger-id"
        class="collapsible-content"
        id="collapsible-id-2"
      >
        
        
        <p
          class="has-p"
        >
          
          Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
          ipsum ut voluptate. 
          <a
            href="#"
            tabindex="-1"
          >
            E pluribus unum.
          </a>
          
        
        </p>
        
      
      </div>
      
    
    </div>
    
  
  </div>
  

</body>
`;

exports[`Accordion #handleClick opens closed collapsible 1`] = `
<body>
  
  
  <div
    class="accordion"
    data-accordion="accordion-id"
  >
    
    
    <div
      class="collapsible"
      data-collapsible="collapsible-id-1"
      data-visible="false"
    >
      
      
      <h5>
        
        
        <button
          aria-controls="collapsible-id-1"
          aria-expanded="false"
          class="collapsible-trigger"
          data-parent="accordion-id"
          data-target="collapsible-id-1"
          id="collapsible-trigger-id"
        >
          
          Collapsible Trigger
        
        </button>
        
      
      </h5>
      
      
      <div
        aria-hidden="true"
        aria-labelledby="collapsible-trigger-id"
        class="collapsible-content"
        id="collapsible-id-1"
        style=""
      >
        
        
        <p
          class="has-p"
        >
          
          Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
          ipsum ut voluptate. 
          <a
            href="#"
            tabindex="-1"
          >
            E pluribus unum.
          </a>
          
        
        </p>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="collapsible"
      data-collapsible="collapsible-id-2"
      data-visible="true"
    >
      
      
      <h5>
        
        
        <button
          aria-controls="collapsible-id-2"
          aria-expanded="true"
          class="collapsible-trigger"
          data-parent="accordion-id"
          data-target="collapsible-id-2"
          id="collapsible-trigger-id"
        >
          
          Collapsible Trigger
        
        </button>
        
      
      </h5>
      
      
      <div
        aria-hidden="false"
        aria-labelledby="collapsible-trigger-id"
        class="collapsible-content"
        id="collapsible-id-2"
        style="max-height: 0rem;"
      >
        
        
        <p
          class="has-p"
        >
          
          Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
          ipsum ut voluptate. 
          <a
            href="#"
            tabindex="0"
          >
            E pluribus unum.
          </a>
          
        
        </p>
        
      
      </div>
      
    
    </div>
    
  
  </div>
  

</body>
`;

exports[`Accordion #setToggleMultiple retains visible state of unselected collapsibles on click 1`] = `
<body
  data-toggle-multiple="null"
>
  
  
  <div
    class="accordion"
    data-accordion="accordion-id"
  >
    
    
    <div
      class="collapsible"
      data-collapsible="collapsible-id-1"
      data-visible="false"
    >
      
      
      <h5>
        
        
        <button
          aria-controls="collapsible-id-1"
          aria-expanded="false"
          class="collapsible-trigger"
          data-parent="accordion-id"
          data-target="collapsible-id-1"
          id="collapsible-trigger-id"
        >
          
          Collapsible Trigger
        
        </button>
        
      
      </h5>
      
      
      <div
        aria-hidden="true"
        aria-labelledby="collapsible-trigger-id"
        class="collapsible-content"
        id="collapsible-id-1"
        style=""
      >
        
        
        <p
          class="has-p"
        >
          
          Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
          ipsum ut voluptate. 
          <a
            href="#"
            tabindex="-1"
          >
            E pluribus unum.
          </a>
          
        
        </p>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="collapsible"
      data-collapsible="collapsible-id-2"
      data-visible="true"
    >
      
      
      <h5>
        
        
        <button
          aria-controls="collapsible-id-2"
          aria-expanded="true"
          class="collapsible-trigger"
          data-parent="accordion-id"
          data-target="collapsible-id-2"
          id="collapsible-trigger-id"
        >
          
          Collapsible Trigger
        
        </button>
        
      
      </h5>
      
      
      <div
        aria-hidden="false"
        aria-labelledby="collapsible-trigger-id"
        class="collapsible-content"
        id="collapsible-id-2"
        style="max-height: 0rem;"
      >
        
        
        <p
          class="has-p"
        >
          
          Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
          ipsum ut voluptate. 
          <a
            href="#"
            tabindex="0"
          >
            E pluribus unum.
          </a>
          
        
        </p>
        
      
      </div>
      
    
    </div>
    
  
  </div>
  

</body>
`;

exports[`Accordion API start can open multiple collapsibles initially 1`] = `
<body>
  
  
  <div
    class="accordion"
    data-accordion="accordion-id"
  >
    
    
    <div
      class="collapsible"
      data-collapsible="collapsible-id-1"
      data-visible="true"
    >
      
      
      <h5>
        
        
        <button
          aria-controls="collapsible-id-1"
          aria-expanded="true"
          class="collapsible-trigger"
          data-parent="accordion-id"
          data-target="collapsible-id-1"
          id="collapsible-trigger-id"
        >
          
          Collapsible Trigger
        
        </button>
        
      
      </h5>
      
      
      <div
        aria-hidden="false"
        aria-labelledby="collapsible-trigger-id"
        class="collapsible-content"
        id="collapsible-id-1"
        style="max-height: 0rem;"
      >
        
        
        <p
          class="has-p"
        >
          
          Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
          ipsum ut voluptate. 
          <a
            href="#"
            tabindex="0"
          >
            E pluribus unum.
          </a>
          
        
        </p>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="collapsible"
      data-collapsible="collapsible-id-2"
      data-visible="true"
    >
      
      
      <h5>
        
        
        <button
          aria-controls="collapsible-id-2"
          aria-expanded="true"
          class="collapsible-trigger"
          data-parent="accordion-id"
          data-target="collapsible-id-2"
          id="collapsible-trigger-id"
        >
          
          Collapsible Trigger
        
        </button>
        
      
      </h5>
      
      
      <div
        aria-hidden="false"
        aria-labelledby="collapsible-trigger-id"
        class="collapsible-content"
        id="collapsible-id-2"
        style="max-height: 0rem;"
      >
        
        
        <p
          class="has-p"
        >
          
          Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
          ipsum ut voluptate. 
          <a
            href="#"
            tabindex="0"
          >
            E pluribus unum.
          </a>
          
        
        </p>
        
      
      </div>
      
    
    </div>
    
  
  </div>
  

</body>
`;

exports[`Accordion API start sets attributes on collapsibles 1`] = `
<body>
  
  
  <div
    class="accordion"
    data-accordion="accordion-id"
  >
    
    
    <div
      class="collapsible"
      data-collapsible="collapsible-id-1"
      data-visible="true"
    >
      
      
      <h5>
        
        
        <button
          aria-controls="collapsible-id-1"
          aria-expanded="true"
          class="collapsible-trigger"
          data-parent="accordion-id"
          data-target="collapsible-id-1"
          id="collapsible-trigger-id"
        >
          
          Collapsible Trigger
        
        </button>
        
      
      </h5>
      
      
      <div
        aria-hidden="false"
        aria-labelledby="collapsible-trigger-id"
        class="collapsible-content"
        id="collapsible-id-1"
        style="max-height: 0rem;"
      >
        
        
        <p
          class="has-p"
        >
          
          Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
          ipsum ut voluptate. 
          <a
            href="#"
            tabindex="0"
          >
            E pluribus unum.
          </a>
          
        
        </p>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="collapsible"
      data-collapsible="collapsible-id-2"
      data-visible="false"
    >
      
      
      <h5>
        
        
        <button
          aria-controls="collapsible-id-2"
          aria-expanded="false"
          class="collapsible-trigger"
          data-parent="accordion-id"
          data-target="collapsible-id-2"
          id="collapsible-trigger-id"
        >
          
          Collapsible Trigger
        
        </button>
        
      
      </h5>
      
      
      <div
        aria-hidden="true"
        aria-labelledby="collapsible-trigger-id"
        class="collapsible-content"
        id="collapsible-id-2"
      >
        
        
        <p
          class="has-p"
        >
          
          Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
          ipsum ut voluptate. 
          <a
            href="#"
            tabindex="-1"
          >
            E pluribus unum.
          </a>
          
        
        </p>
        
      
      </div>
      
    
    </div>
    
  
  </div>
  

</body>
`;

exports[`Accordion API stop + #handleClick does not toggle collapsible 1`] = `
<body>
  
  
  <div
    class="accordion"
    data-accordion="accordion-id"
  >
    
    
    <div
      class="collapsible"
      data-collapsible="collapsible-id-1"
      data-visible="true"
    >
      
      
      <h5>
        
        
        <button
          aria-controls="collapsible-id-1"
          aria-expanded="true"
          class="collapsible-trigger"
          data-parent="accordion-id"
          data-target="collapsible-id-1"
          id="collapsible-trigger-id"
        >
          
          Collapsible Trigger
        
        </button>
        
      
      </h5>
      
      
      <div
        aria-hidden="false"
        aria-labelledby="collapsible-trigger-id"
        class="collapsible-content"
        id="collapsible-id-1"
        style="max-height: 0rem;"
      >
        
        
        <p
          class="has-p"
        >
          
          Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
          ipsum ut voluptate. 
          <a
            href="#"
            tabindex="0"
          >
            E pluribus unum.
          </a>
          
        
        </p>
        
      
      </div>
      
    
    </div>
    
    
    <div
      class="collapsible"
      data-collapsible="collapsible-id-2"
      data-visible="false"
    >
      
      
      <h5>
        
        
        <button
          aria-controls="collapsible-id-2"
          aria-expanded="false"
          class="collapsible-trigger"
          data-parent="accordion-id"
          data-target="collapsible-id-2"
          id="collapsible-trigger-id"
        >
          
          Collapsible Trigger
        
        </button>
        
      
      </h5>
      
      
      <div
        aria-hidden="true"
        aria-labelledby="collapsible-trigger-id"
        class="collapsible-content"
        id="collapsible-id-2"
      >
        
        
        <p
          class="has-p"
        >
          
          Consectetur eiusmod laboris in non id tempor exercitation ipsum cupidatat magna
          ipsum ut voluptate. 
          <a
            href="#"
            tabindex="-1"
          >
            E pluribus unum.
          </a>
          
        
        </p>
        
      
      </div>
      
    
    </div>
    
  
  </div>
  

</body>
`;
